Bug #43660
mds: null pointer dereference in Server::handle_client_link
% Done:
0%
Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature:
History
#1 Updated by Zheng Yan about 1 year ago
- Status changed from New to Fix Under Review
- Pull request ID set to 32722
#2 Updated by Patrick Donnelly about 1 year ago
- Assignee set to Zheng Yan
- Target version set to v15.0.0
- Source set to Development
- Component(FS) MDS added
- Labels (FS) crash added
#3 Updated by Patrick Donnelly 12 months ago
- Status changed from Fix Under Review to Resolved