mds: fix null pointer dereference in Server::handle_client_link()

Fixes: https://tracker.ceph.com/issues/43660
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>